syntax = "proto3";

import "transaction.proto";

package types;

//竞猜游戏内容
message GuessGame {
    string gameId        = 1;  //游戏ID
    int32 status        = 2;  //游戏的状态：创建->投注->截止投注->开奖
    int32 preStatus     = 3;
    int64  startTime     = 4;  //创建游戏的时间
    string startTxHash   = 5;  //创建游戏的交易hash
    string topic         = 6;  //主题
    string category      = 7;  //分类
    string options       = 8;  //选项
    string maxTime       = 9;  //截止下注时间
    int64 maxHeight      = 10;  //截止下注的块高
    string symbol        = 11;  //bty或者具体token
    string exec          = 12; //coins或者token
    uint32 oneBet        = 13; //一注等于多少bty或者token
    uint32 maxBets       = 14; //单次可以下多少注，默认100
    uint32 maxBetsNumber = 15; //最多可以下多少注
    int64 fee           = 16; //收取费用，不带则表示不收费
    string feeAddr       = 17; //收费地址
    string expire        = 18; //游戏过期时间
    int64 expireHeight   = 19; //游戏过期区块高度
    string adminAddr     = 20; //游戏创建者地址,只有该地址可以开奖
    uint32 betsNumber    = 21; //已下注数,如果数量达到maxBetsNumber，则不允许再下注
    repeated GuessPlayer plays = 22; //参与游戏下注的玩家投注信息
    string result = 23;        //公布的中奖结果
    GuessBetStat betStat = 24;
    int64 index          = 25;
    int64 preIndex       = 26;
}

message GuessPlayer {
    string addr = 1;
    GuessBet bet = 2;
}

message GuessBet {
    string option = 1;
    uint32  betsNumber = 2;
    bool    isWinner = 3;
    uint32  profit = 4;
    int64 index = 5;
    int64 preIndex = 6;
}

message GuessBetStat {
    uint32 totalBetTimes = 1;
    uint32 totalBetsNumber = 2;
    repeated GuessBetStatItem items = 3;
}

message GuessBetStatItem {
    string option = 1;
    uint32 betsNumber = 2;
    uint32 betsTimes = 3;
}

//游戏状态
message GuessGameAction {
    oneof value {
        GuessGameStart start     = 1;
        GuessGameBet bet         = 2;
        GuessGameAbort  abort    = 3;
        GuessGamePublish publish = 4;
        GuessGameQuery query     = 5;
    }
    uint32 ty = 6;
}

//游戏启动
message GuessGameStart{
    string topic     = 1;
    string options   = 2;
    string category  = 3;
    string maxTime   = 4;
    int64 maxHeight = 5;
    string symbol    = 6;
    string exec      = 7;
    uint32 oneBet    = 8;
    uint32 maxBets   = 9;
    uint32 maxBetsNumber = 10;
    int64 fee       = 11;
    string feeAddr   = 12;
    string expire    = 13;
    int64 expireHeight = 14;
}

//参与游戏下注
message GuessGameBet{
    string gameId     = 1;
    string option     = 2;
    uint32  betsNum    = 3;
    int64 fee = 4;
}

//游戏异常终止,退还下注
message GuessGameAbort{
    string gameId     = 1;
    int64 fee = 2;
}

//游戏结果揭晓
message GuessGamePublish{
    string gameId     = 1;
    string result     = 2;
    int64 fee = 3;
}

//查询游戏结果
message GuessGameQuery{
    string gameId     = 1;
    uint32 ty          = 2;
    int64 fee = 3;
}


message QueryGuessGameInfo {
    string gameId = 1;
    string addr   = 2;
    int32  status = 3;
    int64  index  = 4;
}

message ReplyGuessGameInfo {
    GuessGame game = 1;
}

message QueryGuessGameInfos {
    repeated string gameIds = 1;
}

message ReplyGuessGameInfos {
    repeated GuessGame games = 1;
}

message ReceiptGuessGame {
    string   gameId           = 1;
    int32   preStatus        = 2;
    int32   status           = 3;
    string   addr             = 4;
    string   adminAddr        = 5;
    int64    preIndex         = 6;
    int64    index            = 7;
    string   category         = 8;
    bool     statusChange     = 9;
}

message GuessStartTxReq {
    string topic              = 1;
    string options            = 2;
    int64  startTime          = 3;
    string maxTime            = 4;
    uint32 maxHeight          = 5;
    string symbol             = 6;
    string exec               = 7;
    uint32 oneBet             = 8;
    uint32 maxBets            = 9;
    uint32 maxBetsNumber      = 10;
    uint64 fee                = 11;
    string feeAddr            = 12;
    string expire             = 13;
    uint32 expireHeight       = 14;
}

message GuessBetTxReq {
    string gameId    = 1;
    string option    = 2;
    uint32  bets      = 3;
}

message GuessAbortTxReq {
    string gameId    = 1;
}

message GuessPublishTxReq {
    string gameId    = 1;
    string result    = 2;
}

// 索引value值
message GuessGameRecord {
    string gameId = 1;
    int32  status = 2;
    int64  index  = 3;
}

message GuessGameIndexRecord {
    string gameId = 1;
    int64  index  = 2;
}

message GuessGameRecords {
    repeated GuessGameRecord records = 1;
}


// guess 对外提供服务的接口
service guess {
    //游戏开始
    rpc GuessStart(GuessGameStart) returns (UnsignTx) {}
    //游戏下注
    rpc GuessBet(GuessGameBet) returns (UnsignTx) {}
    //游戏异常终止
    rpc GuessAbort(GuessGameAbort) returns (UnsignTx) {}
    //游戏结束
    rpc GuessPublish(GuessGamePublish) returns (UnsignTx) {}
}
